# a1_prime

./: .gitignore  CMakeLists.txt
src/: main.cpp  prime.cpp
tests/: test.cpp
